--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image" content="https://www.huellitaspetlove.com/images/huellitas-logo.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./public/huel.png" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
 
     <!-- Additional SEO and Best Practices -->
